...
                val isEmpty = when (value) {
                    null -> true
                    is String -> value.isBlank()
                    is List<*> -> value.isEmpty()
                    else -> false
                }
                if (isEmpty) errors[field.key] = "This field is required"
            }

            if (value != null && value.toString().isNotBlank()) {
                // REGEX Validation
                if (field.regex != null && value is String) {
                    if (!value.matches(Regex(field.regex))) {
...
